Added option to first update dialog to only save recent payment trans.